// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaskedInput should render without throwing an error 1`] = `
<MonthDayDropdown
  fieldName="test"
  values={
    Object {
      "day": 1,
      "month": 1,
    }
  }
>
  <Menu>
    <div
      className="ui menu"
    >
      <Dropdown
        additionLabel="Add "
        additionPosition="top"
        className="link item"
        closeOnBlur={true}
        deburr={false}
        icon=""
        minCharacters={1}
        noResultsMessage="No results found."
        openOnFocus={true}
        renderLabel={[Function]}
        scrolling={true}
        searchInput="text"
        selectOnBlur={true}
        selectOnNavigation={true}
        text="January"
        wrapSelection={true}
      >
        <Ref
          innerRef={
            Object {
              "current": <div
                aria-expanded="false"
                class="ui scrolling dropdown link item"
                role="listbox"
                tabindex="0"
              >
                <div
                  aria-live="polite"
                  class="text"
                  role="alert"
                >
                  January
                </div>
                <i
                  aria-hidden="true"
                  class="icon"
                />
                <div
                  class="menu transition"
                >
                  <div
                    class="item"
                    role="option"
                  >
                    January
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    February
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    March
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    April
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    May
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    June
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    July
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    August
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    September
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    October
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    November
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    December
                  </div>
                </div>
              </div>,
            }
          }
        >
          <RefFindNode
            innerRef={
              Object {
                "current": <div
                  aria-expanded="false"
                  class="ui scrolling dropdown link item"
                  role="listbox"
                  tabindex="0"
                >
                  <div
                    aria-live="polite"
                    class="text"
                    role="alert"
                  >
                    January
                  </div>
                  <i
                    aria-hidden="true"
                    class="icon"
                  />
                  <div
                    class="menu transition"
                  >
                    <div
                      class="item"
                      role="option"
                    >
                      January
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      February
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      March
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      April
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      May
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      June
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      July
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      August
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      September
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      October
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      November
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      December
                    </div>
                  </div>
                </div>,
              }
            }
          >
            <div
              aria-expanded={false}
              className="ui scrolling dropdown link item"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              role="listbox"
              tabIndex={0}
            >
              <div
                aria-live="polite"
                className="text"
                role="alert"
              >
                January
              </div>
              <Icon
                as="i"
                className=""
                name=""
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="icon"
                  onClick={[Function]}
                />
              </Icon>
              <DropdownMenu
                className=""
                key="month"
              >
                <div
                  className="menu transition"
                >
                  <DropdownItem
                    key="January"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      January
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="February"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      February
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="March"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      March
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="April"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      April
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="May"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      May
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="June"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      June
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="July"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      July
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="August"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      August
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="September"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      September
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="October"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      October
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="November"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      November
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="December"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      December
                    </div>
                  </DropdownItem>
                </div>
              </DropdownMenu>
            </div>
          </RefFindNode>
        </Ref>
      </Dropdown>
      <Dropdown
        additionLabel="Add "
        additionPosition="top"
        className="link item"
        closeOnBlur={true}
        deburr={false}
        disabled={false}
        icon=""
        minCharacters={1}
        noResultsMessage="No results found."
        openOnFocus={true}
        renderLabel={[Function]}
        scrolling={true}
        searchInput="text"
        selectOnBlur={true}
        selectOnNavigation={true}
        text="1"
        wrapSelection={true}
      >
        <Ref
          innerRef={
            Object {
              "current": <div
                aria-disabled="false"
                aria-expanded="false"
                class="ui scrolling dropdown link item"
                role="listbox"
                tabindex="0"
              >
                <div
                  aria-live="polite"
                  class="text"
                  role="alert"
                >
                  1
                </div>
                <i
                  aria-hidden="true"
                  class="icon"
                />
                <div
                  class="menu transition"
                >
                  <div
                    class="item"
                    role="option"
                  >
                    1
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    2
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    3
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    4
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    5
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    6
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    7
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    8
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    9
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    10
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    11
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    12
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    13
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    14
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    15
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    16
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    17
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    18
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    19
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    20
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    21
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    22
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    23
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    24
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    25
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    26
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    27
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    28
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    29
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    30
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    31
                  </div>
                </div>
              </div>,
            }
          }
        >
          <RefFindNode
            innerRef={
              Object {
                "current": <div
                  aria-disabled="false"
                  aria-expanded="false"
                  class="ui scrolling dropdown link item"
                  role="listbox"
                  tabindex="0"
                >
                  <div
                    aria-live="polite"
                    class="text"
                    role="alert"
                  >
                    1
                  </div>
                  <i
                    aria-hidden="true"
                    class="icon"
                  />
                  <div
                    class="menu transition"
                  >
                    <div
                      class="item"
                      role="option"
                    >
                      1
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      2
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      3
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      4
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      5
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      6
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      7
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      8
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      9
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      10
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      11
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      12
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      13
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      14
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      15
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      16
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      17
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      18
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      19
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      20
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      21
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      22
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      23
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      24
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      25
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      26
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      27
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      28
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      29
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      30
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      31
                    </div>
                  </div>
                </div>,
              }
            }
          >
            <div
              aria-disabled={false}
              aria-expanded={false}
              className="ui scrolling dropdown link item"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              role="listbox"
              tabIndex={0}
            >
              <div
                aria-live="polite"
                className="text"
                role="alert"
              >
                1
              </div>
              <Icon
                as="i"
                className=""
                name=""
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="icon"
                  onClick={[Function]}
                />
              </Icon>
              <DropdownMenu
                className=""
                key="day"
              >
                <div
                  className="menu transition"
                >
                  <DropdownItem
                    key="1"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      1
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="2"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      2
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="3"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      3
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="4"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      4
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="5"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      5
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="6"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      6
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="7"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      7
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="8"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      8
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="9"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      9
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="10"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      10
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="11"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      11
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="12"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      12
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="13"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      13
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="14"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      14
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="15"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      15
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="16"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      16
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="17"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      17
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="18"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      18
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="19"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      19
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="20"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      20
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="21"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      21
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="22"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      22
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="23"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      23
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="24"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      24
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="25"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      25
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="26"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      26
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="27"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      27
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="28"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      28
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="29"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      29
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="30"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      30
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="31"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      31
                    </div>
                  </DropdownItem>
                </div>
              </DropdownMenu>
            </div>
          </RefFindNode>
        </Ref>
      </Dropdown>
    </div>
  </Menu>
</MonthDayDropdown>
`;

exports[`MaskedInput should render without values without throwing an error 1`] = `
<MonthDayDropdown
  fieldName="test"
  values={Object {}}
>
  <Menu>
    <div
      className="ui menu"
    >
      <Dropdown
        additionLabel="Add "
        additionPosition="top"
        className="link item"
        closeOnBlur={true}
        deburr={false}
        icon=""
        minCharacters={1}
        noResultsMessage="No results found."
        openOnFocus={true}
        renderLabel={[Function]}
        scrolling={true}
        searchInput="text"
        selectOnBlur={true}
        selectOnNavigation={true}
        text="Month"
        wrapSelection={true}
      >
        <Ref
          innerRef={
            Object {
              "current": <div
                aria-expanded="false"
                class="ui scrolling dropdown link item"
                role="listbox"
                tabindex="0"
              >
                <div
                  aria-live="polite"
                  class="text"
                  role="alert"
                >
                  Month
                </div>
                <i
                  aria-hidden="true"
                  class="icon"
                />
                <div
                  class="menu transition"
                >
                  <div
                    class="item"
                    role="option"
                  >
                    January
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    February
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    March
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    April
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    May
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    June
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    July
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    August
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    September
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    October
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    November
                  </div>
                  <div
                    class="item"
                    role="option"
                  >
                    December
                  </div>
                </div>
              </div>,
            }
          }
        >
          <RefFindNode
            innerRef={
              Object {
                "current": <div
                  aria-expanded="false"
                  class="ui scrolling dropdown link item"
                  role="listbox"
                  tabindex="0"
                >
                  <div
                    aria-live="polite"
                    class="text"
                    role="alert"
                  >
                    Month
                  </div>
                  <i
                    aria-hidden="true"
                    class="icon"
                  />
                  <div
                    class="menu transition"
                  >
                    <div
                      class="item"
                      role="option"
                    >
                      January
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      February
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      March
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      April
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      May
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      June
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      July
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      August
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      September
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      October
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      November
                    </div>
                    <div
                      class="item"
                      role="option"
                    >
                      December
                    </div>
                  </div>
                </div>,
              }
            }
          >
            <div
              aria-expanded={false}
              className="ui scrolling dropdown link item"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              role="listbox"
              tabIndex={0}
            >
              <div
                aria-live="polite"
                className="text"
                role="alert"
              >
                Month
              </div>
              <Icon
                as="i"
                className=""
                name=""
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="icon"
                  onClick={[Function]}
                />
              </Icon>
              <DropdownMenu
                className=""
                key="month"
              >
                <div
                  className="menu transition"
                >
                  <DropdownItem
                    key="January"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      January
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="February"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      February
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="March"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      March
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="April"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      April
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="May"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      May
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="June"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      June
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="July"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      July
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="August"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      August
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="September"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      September
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="October"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      October
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="November"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      November
                    </div>
                  </DropdownItem>
                  <DropdownItem
                    key="December"
                    onClick={[Function]}
                  >
                    <div
                      className="item"
                      onClick={[Function]}
                      role="option"
                    >
                      December
                    </div>
                  </DropdownItem>
                </div>
              </DropdownMenu>
            </div>
          </RefFindNode>
        </Ref>
      </Dropdown>
      <Dropdown
        additionLabel="Add "
        additionPosition="top"
        className="link item"
        closeOnBlur={true}
        deburr={false}
        disabled={true}
        icon=""
        minCharacters={1}
        noResultsMessage="No results found."
        openOnFocus={true}
        renderLabel={[Function]}
        scrolling={true}
        searchInput="text"
        selectOnBlur={true}
        selectOnNavigation={true}
        text="day"
        wrapSelection={true}
      >
        <Ref
          innerRef={
            Object {
              "current": <div
                aria-disabled="true"
                aria-expanded="false"
                class="ui disabled scrolling dropdown link item"
                role="listbox"
                tabindex="-1"
              >
                <div
                  aria-live="polite"
                  class="text"
                  role="alert"
                >
                  day
                </div>
                <i
                  aria-hidden="true"
                  class="icon"
                />
                <div
                  class="menu transition"
                />
              </div>,
            }
          }
        >
          <RefFindNode
            innerRef={
              Object {
                "current": <div
                  aria-disabled="true"
                  aria-expanded="false"
                  class="ui disabled scrolling dropdown link item"
                  role="listbox"
                  tabindex="-1"
                >
                  <div
                    aria-live="polite"
                    class="text"
                    role="alert"
                  >
                    day
                  </div>
                  <i
                    aria-hidden="true"
                    class="icon"
                  />
                  <div
                    class="menu transition"
                  />
                </div>,
              }
            }
          >
            <div
              aria-disabled={true}
              aria-expanded={false}
              className="ui disabled scrolling dropdown link item"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              role="listbox"
              tabIndex={-1}
            >
              <div
                aria-live="polite"
                className="text"
                role="alert"
              >
                day
              </div>
              <Icon
                as="i"
                className=""
                name=""
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="icon"
                  onClick={[Function]}
                />
              </Icon>
              <DropdownMenu
                className=""
                key="day"
              >
                <div
                  className="menu transition"
                />
              </DropdownMenu>
            </div>
          </RefFindNode>
        </Ref>
      </Dropdown>
    </div>
  </Menu>
</MonthDayDropdown>
`;
